# atomics2

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: _reusable-build-wheels.yml  on-release.yml  test.yml
src/atomic2/_impl/: patomic.py
src/atomic2/_impl/atomic/: core.py
src/atomics/_impl/: patomic.py
src/atomics/_impl/atomic/mixins/: byteops.py
src/atomics2/_impl/: patomic.py  pybuffer.py
tests/: test_atomic2.py  test_atomics.py  test_atomics2.py
