[metadata]
name = atomic2
version = 1.1.0
description = Atomic lock-free primitives
long_description = file: README.md
long_description_content_type = text/markdown
keywords = atomic, atomics, atomic2, lock-free, lock free
url = https://github.com/mvanderlee/atomics2
author = Michiel van der Lee
author_email = 918128+mvanderlee@users.noreply.github.com
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: System :: Hardware :: Symmetric Multi-processing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
download_url = https://github.com/mvanderlee/atomics2
project_urls =
    Source=https://github.com/mvanderlee/atomics2
    patomic=https://github.com/doodspav/patomic

[options]
python_requires = >=3.11, <4
install_requires = cffi>=1.10
setup_requires =
    GitPython
    cmake>=3.14
    setuptools>=43.0.0
    wheel>=0.25
